# AuthCoreVP

./: .gitignore  CMakeLists.txt  README.md  build_project.sh
client/: CMakeLists.txt  main.cpp  vcpkg.json
client/api/: ApiClient.cpp  ApiClient.h
client/dialog/: AuthDialog.cpp  AuthDialog.h
client/mainwindow/: AuthDialog.cpp  ChangePasswordDialog.cpp  ChangePasswordDialog.h  MainWindow.cpp  MainWindow.h
client/style/: style.qss
client/tests/: test_ApiClient.cpp  test_AuthDialog.cpp  test_ChangePasswordDialog.cpp
scripts/: copy_dlls.ps1
server/: .dockerignore  CMakeLists.txt  Dockerfile  data_base.h  docker-compose.yml  main.cpp  password_hasher.h  vcpkg.json
server/audit/: audit_logger.h
server/cli/: ServerCLI.cpp  ServerCLI.h  commands.md
server/db/: data_base.cpp  data_base.h
server/hasher/: password_hasher.h
server/jwt/: jwt_manager.h
server/rate_limiter/: rate_limiter.cpp  rate_limiter.h
server/routes/: routes.cpp  routes.h
server/static/: admin.css  login.css  style.css
server/static/css/: access.css
server/static/js/: access.js
server/templates/: access.html  admin_panel.html  controllers.html  index.html  login.html  roles.html  users.html
